# nix-config

./: .cspell.yaml  .envrc  .gitignore  .sops.yaml  README.md  flake.nix  secrets.yaml  shell.nix  treefmt.nix  utils.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0ir0v2bv9yxy36vq9vrf4gf7xdmm2af1-source  0iwjiqn0myzhx2nxlsvb32gmzxz3340y-source  1idb4i6l52zs62d91ynxrak2q0qgpkz0-source  3i3rncs75fid9hwai5p2nvwc4ngdnia7-source  3phl7qxbxvxdg5b053q81mgqwf95gsiv-source  80v3x99d9cl7h9fbhqrpajwg4vjyxg6y-source  9q5af6vfndbwcwh0nbyjspq1n63ycj4q-source  aivbrld0mx8cd2pd0vjyck9qp5nnjrmm-source  dxlarx8kkwmkw2lr0h3097v31say6z4i-source  g16z4fs1mrbkxc4x6wm8xbrh13nc7aw4-source  hh8q6d9rgh7ghpb20xmvnyd6fidy80ln-source  rg7xwcmfiz7lnfqgdvypzsmk01w2mlhz-source  si2qy65l3gpi9r73pkpdg94141q4zy54-source  y0c95bwyvs80pm69hdd4b11pyq2ghiwh-source
.github/workflows/: nix-test.yaml  update-flake.yaml
hosts/araizen/: default.nix
hosts/common/: bash.nix  dash.nix  doas.nix  fonts.nix  nix.nix  opentabletdriver.nix  pipewire.nix  podman.nix  steam.nix  udisks2.nix  vm.nix
hosts/uicom/: default.nix  hardware-configuration.nix  nvidia.nix
hosts/uicom-bak/: default.nix  hardware-configuration.nix
hosts/uifw/: default.nix  hardware-configuration.nix  secrets.yaml
hosts/vm/: default.nix  hardware-configuration.nix
hosts/vm-btrfs/: default.nix  disko-config.nix
hosts/vm-disko-test/: default.nix  disko-config.nix
hosts/vm-imper-mini/: default.nix  hardware-configuration.nix
hosts/vm-imper-test/: default.nix  disko-config.nix
hosts/vm-imper-uicom/: default.nix
hosts/vm-impermanence/: default.nix  disko-config.nix  hardware-configuration.nix  impermanence.nix
hosts/vm-mini/: default.nix  hardware-configuration.nix
hosts/vm-minimal/: default.nix
modules/home-manager/: default.nix  global.nix
modules/nixos/: default.nix  global.nix  users.nix
overlays/: default.nix
pkgs/: default.nix
pkgs/dmenu-scripts/: default.nix  power-menu.nix
pkgs/dwm/: Makefile  config.h  drw.c  dwm.1  dwm.c
pkgs/dwmblocks/: Makefile  README.md  config.h  default.nix
pkgs/scripts/: 0x0.nix  app-launcher.nix  bright.nix  build.nix  clip.nix  default.nix  extract.nix  fetch-title.nix  fff.nix  fmenu.nix  menu.nix  mkbigfile.nix  nix-template-tool.nix  notify-send-all.nix  open-git-remote.nix  open.nix  pdf-decrypt.nix  power-menu.nix  preview.nix  py.nix  rand-port.nix  screenshot.nix  swallower.nix  tmux-select-sessions.nix  tmux-toggle-popup.nix  tmux-toggle-split.nix  tmux-toggle-window.nix  ux.nix  vl.nix
pkgs/sddm-astronaut-theme/: default.nix
pkgs/st/: Makefile  config.h  st.1  st.c  st.h  x.c
pkgs/tmux-plugins/: default.nix  extrakto.nix  tmux-nvim.nix  tmux-smooth-scroll.nix
templates/: default.nix
templates/axum-full/: .env  Cargo.toml  default.nix  docker-compose.yml  flake.nix  shell.nix
templates/axum-full/migrations/: 20240726143440_init.up.sql
templates/axum-full/src/: error.rs  handler.rs  main.rs  prelude.rs
templates/axum-startup/: Cargo.toml  default.nix  flake.nix  shell.nix
templates/go/: .gitignore  flake.nix  go.mod
templates/python/: default.nix  flake.nix  pyproject.toml  setup.py  shell.nix
templates/python-uv/: flake.nix  pyproject.toml
templates/python-uv/src/: __main__.py  main.py
templates/python-venv/: setup.py
templates/rust/: .gitignore  Cargo.toml  default.nix  flake.nix  rust-toolchain.toml  shell.nix
templates/rust-axum/: Cargo.toml  README.md  flake.nix
templates/rust-axum/src/: app.rs  main.rs  utils.rs
templates/rust-simple/: .envrc  .gitignore  Cargo.toml
templates/rust/src/: main.rs
users/ui/: uicom.nix  vm.nix
(+888 files in other folders)
