[package]
name = "{{CODENAME}}"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "uuid" ] }

tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1.0"

dotenv = "0.15"

[dev-dependencies]
anyhow = "1.0"
