[project]
name = "{{CODENAME}}"
version = "0.1.0"

authors = []
maintainers = []
description = ""
readme = "README.md"

requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.116.1"]

[dependency-groups]
dev = [
  "ruff>=0.6.2",
  "fastapi-cli>=0.0.5",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
