[package]
name = "{{CODENAME}}"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

tokio = { version = "1", features = ["full"] }
axum = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
