[package]
name = "{{CODENAME}}"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }

anyhow = "1.0"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { ver

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "request-id",
  "sensitive-headers",
  "util",
] }
